Fix typeError, realign and shift originalSite button

--- a/styles/projects/mubasic.module.scss
+++ b/styles/projects/mubasic.module.scss
@@ -107,7 +107,8 @@
   flex-direction: column;
   align-items: center;
   gap: 32px;
-  height: 33vmin;
+  height: 30vmin;
+  margin-top: 32px;
 }
 
 .projectOverview {
@@ -118,11 +119,17 @@
   line-height: 1.4rem;
 }
 
+.linkWrapper {
+  display: flex;
+  gap: 8px;
+  align-self: center;
+}
+
+.originalLink,
 .mediumLink {
   width: fit-content;
   background-color: white;
   border-radius: 4px;
-  margin-top: 60px;
   padding: 8px 12px 8px 12px;
   font-family: $display-font;
   font-size: 1rem;
